2988. Sold out tweaks - Flight & Hotel
Summary:
Let's handle hotel product key expiration.
Now the trip bucket item has a new state "Expired" to indicate the same.
The checkoutstate when tripBucketItem transitions to this state is CheckoutState.BOOKING_UNAVAILABLE

Also now let's go ahead and handle the FLIGHT_SOLD_OUT and SESSION_TIMEOUT separately.

Reviewers: brennan

Differential Revision: https://phabricator.mobiata.com/D484

--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -3152,8 +3152,10 @@
     <string name="tablet_sold_out_select_hotel">Select another hotel</string>
     <!-- Button text to select another hotel or room -->
     <string name="tablet_sold_out_select_hotel_room">Select another hotel or room</string>
-    <!-- Header text to indicating flight sold out -->
+    <!-- Header text to indicating flight is sold out -->
     <string name="tablet_sold_out_summary_text_flight">This flight is now sold out. Sorry!</string>
+    <!-- Header text to indicating flights are sold out -->
+    <string name="tablet_sold_out_summary_text_flights">These flights are now sold out. Sorry!</string>
     <!-- Button text to remove sold flight -->
     <string name="tablet_sold_out_remove_flight">Remove flight</string>
     <!-- Button text to select another flight -->
