--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -254,6 +254,8 @@
     <string name="recommend">recommend</string>
     <!-- Caption for percent of guests who recommend this hotel including the percentage, i.e. "90% recommend" -->
     <string name="n_recommend_TEMPLATE">%s%% recommend</string>
+    <!-- A message stating this hotel is all sold out for the given dates searched -->
+    <string name="sorry_rooms_sold_out">Sorry, all rooms are sold out on Expedia.</string>
     <!-- Hotel gallery title -->
     <string name="photos_for_TEMPLATE">Photos for %s</string>
     <!-- Caption for number of rooms left count, i.e. 4 "rooms left" -->
