--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -385,7 +385,7 @@
     <!-- Tablet. Header text when the device is not connected to internet/network unavailable. -->
     <string name="network_unavailable">Network Unavailable</string>
     <!-- Tablet. Error message when the device is not connected to internet/network unavailable. -->
-    <string name="error_network_unavailable">Connect to a Wi-Fi or cellular data network to continue</string>
+    <string name="error_network_unavailable">Connect to a Wi-Fi or cellular\ndata network to continue</string>
     <!-- Menu option for going to see your trips/itineraries -->
     <string name="trips">Trips</string>
     <!-- Menu option for going to see your trips/itineraries -->
