Add string back in
It wasn't unused after I rebased...

I guess time for bed for me too.

--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -30,6 +30,8 @@
     <string name="trip_ends">Trip ends</string>
     <!-- Denotes that the return date for the trip is optional, in the event of a one-way flight ticket -->
     <string name="trip_end_optional">Optional</string>
+    <!-- Button text for when flight origin is missing -->
+    <string name="missing_flight_info_button_prompt">Select Airport</string>
 
     <!-- Calendar picker strings -->
     <!-- Accessibility string describing calendar header. This is for the previous month label, which the user can click to go back one month. %s is the month, e.g. "September previous month" -->
