--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -12,8 +12,8 @@
     <string name="fly_from_TEMPLATE">Fly from %1$s</string>
     <!-- Fly from... -->
     <string name="Fly_from_dot_dot_dot">Fly from…</string>
-    <!-- Choose flight dates -->
-    <string name="choose_flight_dates">Choose flight dates</string>
+    <!-- Select dates - used for the Calendar. Must be "proper case" -->
+    <string name="select_dates_proper_case">Select dates</string>
     <!-- Choose dates. Used in tablet calendar, when flights are not supported for certain POS -->
     <string name="choose_dates">Choose dates</string>
     <!-- Hotels Tonight -->
