--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -112,8 +112,10 @@
     <string name="loading_hotels_and_flights">Loading Hotels and Flights&#8230;</string>
     <!-- Flight fare calendar header for a list of dates to fly -->
     <string name="when_to_fly">When To Fly</string>
+    <!-- Flight fare calendar header for a list of dates to fly -->
+    <string name="flight_trends">Flight trends</string>
     <!-- Flight fare calendar header for return flights -->
-    <string name="when_to_return">When to Return</string>
+    <string name="when_to_return">When to return</string>
     <!-- Waypoint fail message for when no suggestion is available. -->
     <string name="waypoint_suggestion_fail">No waypoint information found! Please alter your query and try again.</string>
     <!-- Tablet search results, no hotels available -->
